<?xml version="1.0"?>
<package format="2">
  <name>vslam</name>
  <version>0.0.0</version>
  <description>The vslam package</description>

  <maintainer email="sanketsalunkhe12@gmail.com">sanket</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
